--- a/package.json
+++ b/package.json
@@ -15,43 +15,32 @@
     "@emotion/styled": "11.10.5",
     "@fortawesome/fontawesome-free": "^6.2.1",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
-    "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@keplr-wallet/cosmos": "0.11.12",
     "@material-tailwind/react": "^1.2.4",
-    "@mui/icons-material": "5.11.0",
-    "@mui/lab": "5.0.0-alpha.115",
-    "@mui/material": "5.11.4",
+    "@mui/material": "^5.11.14",
     "@noble/hashes": "1.1.5",
     "@tharsis/transactions": "0.2.5",
     "@types/react-copy-to-clipboard": "5.0.4",
     "@types/react-modal": "^3.13.1",
     "@vitejs/plugin-react-refresh": "^1.3.6",
-    "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.13",
     "bignumber.js": "9.1.1",
     "buffer": "6.0.3",
-    "chart.js": "^4.1.0",
-    "google-protobuf": "^3.14.0",
     "long": "5.2.1",
     "react": "18.2.0",
     "react-chartjs-2": "^5.0.1",
     "react-copy-to-clipboard": "5.1.0",
-    "react-device-detect": "2.2.2",
     "react-dom": "18.2.0",
     "react-helmet-async": "^1.3.0",
-    "react-if": "4.1.4",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.4.3",
-    "react-select": "^5.7.0",
     "react-socks": "2.2.0",
     "react-toastify": "9.1.1",
     "react-tooltip": "^5.3.1",
-    "sass": "^1.56.1",
     "secretjs": "^1.7.2",
-    "tailwind": "^4.0.0",
     "tailwindcss": "^3.2.4",
     "vite": "^4.0.0",
     "vite-tsconfig-paths": "^4.0.3"
